Fix diff arrow on firefox

--- a/lumify-web-war/src/main/webapp/less/workspaces/diff.less
+++ b/lumify-web-war/src/main/webapp/less/workspaces/diff.less
@@ -96,8 +96,10 @@
       }
       .edge-label {
         position: relative;
-        &:after {
-          content: '\2192';
+        div {
+          position: relative;
+        }
+        span {
           position: absolute;
           margin-left: 2px;
         }
